--- a/index.html
+++ b/index.html
@@ -13,157 +13,183 @@
       rel="stylesheet"
     />
     <!-- normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <!-- custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <!-- page section -->
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo link" href="./index.html"
-          >WeB<span class="logo-two">Studio</span></a
-        >
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address-list">
-        <ul class="header-list list">
-          <li class="header-address">
-            <a
-              class="header-address-contacts link"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-address">
-            <a class="header-address-contacts link" href="tel:+11000111-11-11"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a class="logo link" href="./index.html"
+            >WeB<span class="logo-two">Studio</span></a
+          >
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address-list">
+          <ul class="header-list list">
+            <li class="header-address">
+              <a
+                class="header-address-contacts link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address">
+              <a class="header-address-contacts link" href="tel:+11000111-11-11"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main block -->
     <main class="main">
       <!-- Hero section -->
       <section class="section-hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn">Order Service</button>
+        <div class="section-container container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn">Order Service</button>
+        </div>
       </section>
       <!-- Feature -->
-      <section class="feature">
-        <h2 hidden>Skill</h2>
-        <ul class="feature-list list">
-          <li class="feature-list-fool">
-            <h3 class="feature-hero">Strategy</h3>
-            <p class="feature-options">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature-list-fool">
-            <h3 class="feature-hero">Punctuality</h3>
-            <p class="feature-options">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature-list-fool">
-            <h3 class="feature-hero">Diligence</h3>
-            <p class="feature-options">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature-list-fool">
-            <h3 class="feature-hero">Technologies</h3>
-            <p class="feature-options">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
+      <div class="feature-container container">
+        <section class="feature">
+          <h2 hidden>Skill</h2>
+          <ul class="feature-list list">
+            <li class="feature-list-fool">
+              <h3 class="feature-hero">Strategy</h3>
+              <p class="feature-options">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-list-fool">
+              <h3 class="feature-hero">Punctuality</h3>
+              <p class="feature-options">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-list-fool">
+              <h3 class="feature-hero">Diligence</h3>
+              <p class="feature-options">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-list-fool">
+              <h3 class="feature-hero">Technologies</h3>
+              <p class="feature-options">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
       <!-- What are we doing -->
       <section class="what-we-doing">
-        <h2 class="technologies-hero">What are we doing</h2>
-        <ul class="technologies-list list">
-          <li class="technologies">
-            <img
-              src="./images2/img-2.jpg"
-              alt="monitor"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="technologies">
-            <img
-              src="./images2/img-3.jpg"
-              alt="tel1"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="technologies">
-            <img
-              src="./images2/img-1.jpg"
-              alt="tel2"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="what-we-doing-container container">
+          <h2 class="technologies-hero">What are we doing</h2>
+          <ul class="technologies-list list">
+            <li class="technologies">
+              <img
+                src="./images2/img-2.jpg"
+                alt="monitor"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="technologies">
+              <img
+                src="./images2/img-3.jpg"
+                alt="tel1"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="technologies">
+              <img
+                src="./images2/img-1.jpg"
+                alt="tel2"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our team -->
-      <section class="our-team-background">
-        <h2 class="our-team-hero">Our Team</h2>
-        <ul class="our-team-list list">
-          <li class="team-work">
-            <img src="./images/img-3.jpg" alt="man" width="264" height="260" />
-            <h3 class="name-team">Mark Guerrero</h3>
-            <p class="team-skill">Product Designer</p>
-          </li>
-          <li class="team-work">
-            <img src="./images/img-2.jpg" alt="man" width="264" height="260" />
-            <h3 class="name-team">Tom Ford</h3>
-            <p class="team-skill">Frontend Developer</p>
-          </li>
-          <li class="team-work">
-            <img
-              src="./images/img-1.jpg"
-              alt="woman"
-              width="264"
-              height="260"
-            />
-            <h3 class="name-team">Camila Garcia</h3>
-            <p class="team-skill">Marketing</p>
-          </li>
-          <li class="team-work">
-            <img src="./images/img.jpg" alt="man" width="264" height="260" />
-            <h3 class="name-team">Daniel Wilson</h3>
-            <p class="team-skill">UI Designer</p>
-          </li>
-        </ul>
+      <section class="our-team">
+        <div class="our-team-container container">
+          <h2 class="our-team-hero">Our Team</h2>
+          <ul class="our-team-list list">
+            <li class="team-work">
+              <img
+                src="./images/img-3.jpg"
+                alt="man"
+                width="264"
+                height="260"
+              />
+              <h3 class="name-team">Mark Guerrero</h3>
+              <p class="team-skill">Product Designer</p>
+            </li>
+            <li class="team-work">
+              <img
+                src="./images/img-2.jpg"
+                alt="man"
+                width="264"
+                height="260"
+              />
+              <h3 class="name-team">Tom Ford</h3>
+              <p class="team-skill">Frontend Developer</p>
+            </li>
+            <li class="team-work">
+              <img
+                src="./images/img-1.jpg"
+                alt="woman"
+                width="264"
+                height="260"
+              />
+              <h3 class="name-team">Camila Garcia</h3>
+              <p class="team-skill">Marketing</p>
+            </li>
+            <li class="team-work">
+              <img src="./images/img.jpg" alt="man" width="264" height="260" />
+              <h3 class="name-team">Daniel Wilson</h3>
+              <p class="team-skill">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="logo-link link" href="./index.html"
-        >WeB<span class="down-logo">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="footer-container container">
+        <a class="logo-link link" href="./index.html"
+          >WeB<span class="down-logo">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
