--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
     />
     <!-- normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <!-- custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
