--- a/portfolio.html
+++ b/portfolio.html
@@ -23,185 +23,191 @@
   <body class="portfolio-page">
     <!-- page section -->
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-two">Studio</span></a
-        >
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address-list">
-        <ul class="header-list list">
-          <li class="header-address">
-            <a
-              class="header-address-contacts link"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-address">
-            <a class="header-address-contacts link" href="tel:+11000111-11-11"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-      <!-- Main Block -->
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-two">Studio</span></a
+          >
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address-list">
+          <ul class="header-list list">
+            <li class="header-address">
+              <a
+                class="header-address-contacts link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address">
+              <a class="header-address-contacts link" href="tel:+11000111-11-11"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
+    <!-- Main Block -->
     <main class="portfolio-page">
       <!-- Filters -->
       <section class="section-row2">
-        <h2 hidden>Portfolio</h2>
-        <ul class="section-filters list">
-          <li class="button-section">
-            <button type="button" class="button-filters">All</button>
-          </li>
-          <li class="button-section">
-            <button type="button" class="button-filters">Web Site</button>
-          </li>
-          <li class="button-section">
-            <button type="button" class="button-filters">App</button>
-          </li>
-          <li class="button-section">
-            <button type="button" class="button-filters">Design</button>
-          </li>
-          <li class="button-section">
-            <button type="button" class="button-filters">Marketing</button>
-          </li>
-        </ul>
-        <!-- Row 1 -->
-        <ul class="section-list list">
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img.jpg"
-                alt="banking"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Banking App Interface Concept</h2>
-              <p class="section-row">App</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img1.jpg"
-                alt="marketing"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Cashless Payment</h2>
-              <p class="section-row">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img2.jpg"
-                alt="meditation"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Meditation App</h2>
-              <p class="section-row">App</p></a
-            >
-          </li>
-          <!-- Row 2 -->
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img3.jpg"
-                alt="taxi"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Taxi Service</h2>
-              <p class="section-row">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img4.jpg"
-                alt="screen"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Screen Illustrations</h2>
-              <p class="section-row">Design</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img5.jpg"
-                alt="online"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Online Courses</h2>
-              <p class="section-row">Marketing</p></a
-            >
-          </li>
-          <!-- Row 3 -->
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img6.jpg"
-                alt="concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Instagram Stories Concept</h2>
-              <p class="section-row">Design</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img7.jpg"
-                alt="organic"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Organic Food</h2>
-              <p class="section-row">Web Site</p></a
-            >
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images3/img8.jpg"
-                alt="fresh"
-                width="360"
-                height="300"
-              />
-              <h2 class="section-item">Fresh Coffee</h2>
-              <p class="section-row">Web Site</p></a
-            >
-          </li>
-        </ul>
+        <div class="section-container container">
+          <h2 hidden>Portfolio</h2>
+          <ul class="section-filters list">
+            <li class="button-section">
+              <button type="button" class="button-filters">All</button>
+            </li>
+            <li class="button-section">
+              <button type="button" class="button-filters">Web Site</button>
+            </li>
+            <li class="button-section">
+              <button type="button" class="button-filters">App</button>
+            </li>
+            <li class="button-section">
+              <button type="button" class="button-filters">Design</button>
+            </li>
+            <li class="button-section">
+              <button type="button" class="button-filters">Marketing</button>
+            </li>
+          </ul>
+          <!-- Row 1 -->
+          <ul class="section-list list">
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img.jpg"
+                  alt="banking"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Banking App Interface Concept</h2>
+                <p class="section-row">App</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img1.jpg"
+                  alt="marketing"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Cashless Payment</h2>
+                <p class="section-row">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img2.jpg"
+                  alt="meditation"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Meditation App</h2>
+                <p class="section-row">App</p></a
+              >
+            </li>
+            <!-- Row 2 -->
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img3.jpg"
+                  alt="taxi"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Taxi Service</h2>
+                <p class="section-row">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img4.jpg"
+                  alt="screen"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Screen Illustrations</h2>
+                <p class="section-row">Design</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img5.jpg"
+                  alt="online"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Online Courses</h2>
+                <p class="section-row">Marketing</p></a
+              >
+            </li>
+            <!-- Row 3 -->
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img6.jpg"
+                  alt="concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Instagram Stories Concept</h2>
+                <p class="section-row">Design</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img7.jpg"
+                  alt="organic"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Organic Food</h2>
+                <p class="section-row">Web Site</p></a
+              >
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images3/img8.jpg"
+                  alt="fresh"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="section-item">Fresh Coffee</h2>
+                <p class="section-row">Web Site</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="logo-link link" href="./index.html"
-        >WeB<span class="down-logo link">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="footer-container container">
+        <a class="logo-link link" href="./index.html"
+          >WeB<span class="down-logo link">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
