--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="name-team">Mark Guerrero</h3>
-              <p class="team-skill">Product Designer</p>
+              <div class="our-team-div">
+                <h3 class="name-team">Mark Guerrero</h3>
+                <p class="team-skill">Product Designer</p>
+              </div>
             </li>
             <li class="team-work">
               <img
@@ -157,8 +159,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="name-team">Tom Ford</h3>
-              <p class="team-skill">Frontend Developer</p>
+              <div class="our-team-div">
+                <h3 class="name-team">Tom Ford</h3>
+                <p class="team-skill">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-work">
               <img
@@ -167,13 +171,17 @@
                 width="264"
                 height="260"
               />
-              <h3 class="name-team">Camila Garcia</h3>
-              <p class="team-skill">Marketing</p>
+              <div class="our-team-div">
+                <h3 class="name-team">Camila Garcia</h3>
+                <p class="team-skill">Marketing</p>
+              </div>
             </li>
             <li class="team-work">
               <img src="./images/img.jpg" alt="man" width="264" height="260" />
-              <h3 class="name-team">Daniel Wilson</h3>
-              <p class="team-skill">UI Designer</p>
+              <div class="our-team-div">
+                <h3 class="name-team">Daniel Wilson</h3>
+                <p class="team-skill">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
