--- a/portfolio.html
+++ b/portfolio.html
@@ -91,9 +91,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Banking App Interface Concept</h2>
                 <p class="section-row">App</p></a
               >
+              </div>
             </li>
             <li>
               <a class="link" href="">
@@ -103,9 +105,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Cashless Payment</h2>
                 <p class="section-row">Marketing</p></a
               >
+              </div>
             </li>
             <li>
               <a class="link" href="">
@@ -115,9 +119,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Meditation App</h2>
                 <p class="section-row">App</p></a
               >
+              </div>
             </li>
             <!-- Row 2 -->
             <li>
@@ -128,9 +134,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Taxi Service</h2>
                 <p class="section-row">Marketing</p></a
               >
+              </div>
             </li>
             <li>
               <a class="link" href="">
@@ -140,9 +148,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Screen Illustrations</h2>
                 <p class="section-row">Design</p></a
               >
+              </div>
             </li>
             <li>
               <a class="link" href="">
@@ -152,9 +162,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Online Courses</h2>
                 <p class="section-row">Marketing</p></a
               >
+              </div>
             </li>
             <!-- Row 3 -->
             <li>
@@ -165,9 +177,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Instagram Stories Concept</h2>
                 <p class="section-row">Design</p></a
               >
+              </div>
             </li>
             <li>
               <a class="link" href="">
@@ -177,9 +191,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Organic Food</h2>
                 <p class="section-row">Web Site</p></a
               >
+              </div>
             </li>
             <li>
               <a class="link" href="">
@@ -189,9 +205,11 @@
                   width="360"
                   height="300"
                 />
+                <div class="photo-portfolio">
                 <h2 class="section-item">Fresh Coffee</h2>
                 <p class="section-row">Web Site</p></a
               >
+              </div>
             </li>
           </ul>
         </div>
