--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- Feature -->
       <section class="feature">
         <div class="feature-container container">
-          <h2 hidden>Skill</h2>
+          <h2 class="visually-hidden">Skill</h2>
           <ul class="feature-list list">
             <li class="feature-list-fool">
               <h3 class="feature-hero">Strategy</h3>
