--- a/portfolio.html
+++ b/portfolio.html
@@ -92,10 +92,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Banking App Interface Concept</h2>
-                <p class="section-row">App</p></a
-              >
-              </div>
+                  <h2 class="section-item">Banking App Interface Concept</h2>
+                  <p class="section-row">App</p>
+                </div>
+              </a>
             </li>
             <li>
               <a class="link" href="">
@@ -106,10 +106,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Cashless Payment</h2>
-                <p class="section-row">Marketing</p></a
-              >
-              </div>
+                  <h2 class="section-item">Cashless Payment</h2>
+                  <p class="section-row">Marketing</p>
+                </div>
+              </a>
             </li>
             <li>
               <a class="link" href="">
@@ -120,10 +120,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Meditation App</h2>
-                <p class="section-row">App</p></a
-              >
-              </div>
+                  <h2 class="section-item">Meditation App</h2>
+                  <p class="section-row">App</p>
+                </div>
+              </a>
             </li>
             <!-- Row 2 -->
             <li>
@@ -135,10 +135,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Taxi Service</h2>
-                <p class="section-row">Marketing</p></a
-              >
-              </div>
+                  <h2 class="section-item">Taxi Service</h2>
+                  <p class="section-row">Marketing</p>
+                </div>
+              </a>
             </li>
             <li>
               <a class="link" href="">
@@ -149,10 +149,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Screen Illustrations</h2>
-                <p class="section-row">Design</p></a
-              >
-              </div>
+                  <h2 class="section-item">Screen Illustrations</h2>
+                  <p class="section-row">Design</p>
+                </div>
+              </a>
             </li>
             <li>
               <a class="link" href="">
@@ -163,10 +163,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Online Courses</h2>
-                <p class="section-row">Marketing</p></a
-              >
-              </div>
+                  <h2 class="section-item">Online Courses</h2>
+                  <p class="section-row">Marketing</p>
+                </div>
+              </a>
             </li>
             <!-- Row 3 -->
             <li>
@@ -178,10 +178,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Instagram Stories Concept</h2>
-                <p class="section-row">Design</p></a
-              >
-              </div>
+                  <h2 class="section-item">Instagram Stories Concept</h2>
+                  <p class="section-row">Design</p>
+                </div>
+              </a>
             </li>
             <li>
               <a class="link" href="">
@@ -192,10 +192,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Organic Food</h2>
-                <p class="section-row">Web Site</p></a
-              >
-              </div>
+                  <h2 class="section-item">Organic Food</h2>
+                  <p class="section-row">Web Site</p>
+                </div>
+              </a>
             </li>
             <li>
               <a class="link" href="">
@@ -206,10 +206,10 @@
                   height="300"
                 />
                 <div class="photo-portfolio">
-                <h2 class="section-item">Fresh Coffee</h2>
-                <p class="section-row">Web Site</p></a
-              >
-              </div>
+                  <h2 class="section-item">Fresh Coffee</h2>
+                  <p class="section-row">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
