--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
       <!-- Filters -->
       <section class="section-row-filters">
         <div class="section-container container">
-          <h2 class="visually-hidden" hidden>Portfolio</h2>
+          <h2 class="visually-hidden">Portfolio</h2>
           <ul class="section-filters list">
             <li class="button-section">
               <button type="button" class="button-filters">All</button>
