--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
       <!-- Filters -->
       <section class="section-row-filters">
         <div class="section-container container">
-          <h2 class="visually-hidden" hidden>Portfolio</h2>
+          <h1 class="visually-hidden">Portfolio</h1>
           <ul class="section-filters list">
             <li class="button-section">
               <button type="button" class="button-filters">All</button>
@@ -83,7 +83,7 @@
           </ul>
           <!-- Row 1 -->
           <ul class="section-list list">
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img.jpg"
@@ -97,7 +97,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img1.jpg"
@@ -111,7 +111,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img2.jpg"
@@ -126,7 +126,7 @@
               </a>
             </li>
             <!-- Row 2 -->
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img3.jpg"
@@ -140,7 +140,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img4.jpg"
@@ -154,7 +154,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img5.jpg"
@@ -169,7 +169,7 @@
               </a>
             </li>
             <!-- Row 3 -->
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img6.jpg"
@@ -183,7 +183,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img7.jpg"
@@ -197,7 +197,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="photo-item">
               <a class="link" href="">
                 <img
                   src="./images3/img8.jpg"
